--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>gitojkのページ。</h1>
+    <h1>gitojkのページ</h1>
+
+    <p>ここはgitojkの練習用のウェブページです。Appleには敵いません</p>
 </body>
 </html>
